--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_apiKey=AIzaSyANdCAqIVtwz2H228yfWfUPbs2LXptvGuE
-REACT_APP_authDomain=movie-app-92835.firebaseapp.com
-REACT_APP_projectId=movie-app-92835
-REACT_APP_storageBucket=movie-app-92835.appspot.com
-REACT_APP_messagingSenderId=51964243100
-REACT_APP_appId=1:51964243100:web:388d3c933c076008ed9159
-REACT_APP_TMDB_KEY=7e4a28f5d481ff34f8c89c8fd3f0ae0c
+REACT_APP_apiKey = AIzaSyANdCAqIVtwz2H228yfWfUPbs2LXptvGuE
+REACT_APP_authDomain = movie-app-92835.firebaseapp.com
+REACT_APP_projectId = movie-app-92835
+REACT_APP_storageBucket = movie-app-92835.appspot.com
+REACT_APP_messagingSenderId = 51964243100
+REACT_APP_appId = 1:51964243100:web:388d3c933c076008ed9159
+REACT_APP_TMDB_KEY = 7e4a28f5d481ff34f8c89c8fd3f0ae0c
